Adding splunk and application stack

--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -339,6 +339,16 @@
                 "IamInstanceProfile": {
                     "Ref": "ApplicationInstacneIamProfile"
                 },
+                "BlockDeviceMappings":[
+                    {
+                        "DeviceName" : "/dev/xvda",
+                        "Ebs" : {
+                            "DeleteOnTermination": true,
+                            "VolumeSize": 50,
+                            "VolumeType":"gp2"
+                        }
+                    }
+                ],
                 "KeyName": {
                     "Ref": "ApplicationInstanceKeyPair"
                 },
