--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,16 +1,12 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Build and Deploy Pipeline
-
+run-name: ${{ github.ref_name }}-${{ github.run_number }}
 on:
   push:
-    branches: [ master ]
-
+    branches: 
+     - 'master' 
 permissions:
   id-token: write
   contents: read
-
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
