--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -438,12 +438,11 @@
                       "Ebs": {
                         "DeleteOnTermination": true,
                         "VolumeSize": "200",
-                        "SnapshotId":"snap-0a7ec20c0fbf7257b",
                         "VolumeType": "standard"
                       }
                     },
                     {
-                      "DeviceName": "/dev/xvdf",
+                      "DeviceName": "/dev/xvdbf",
                       "Ebs": {
                         "DeleteOnTermination": true,
                         "VolumeSize": "200",
