add second disk to 200 and using snapshot

--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -442,7 +442,7 @@
                       }
                     },
                     {
-                      "DeviceName": "/dev/xvdbf",
+                      "DeviceName": "/dev/sdb",
                       "Ebs": {
                         "DeleteOnTermination": true,
                         "VolumeSize": "200",
