--- a/templates/mumbai/splunk/application.json
+++ b/templates/mumbai/splunk/application.json
@@ -485,6 +485,7 @@
           "Type": "AWS::EC2::Volume",
           "Properties": {
             "Size": "256",
+            "AvailabilityZone": "ap-south-1a",
             "VolumeType": "gp2"
           }
         }
