updating mongo with replicakey perms

--- a/templates/mumbai/mongo/application.json
+++ b/templates/mumbai/mongo/application.json
@@ -2,7 +2,7 @@
     "AWSTemplateFormatVersion": "2010-09-09",
     "Parameters": {
         "MongoAmiId": {
-          "Description": "The AMI ID for the Mongo",
+          "Description": "The AMI ID for the Mongo Instances",
           "Type": "String"
         }
       },
