--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: check1
+name: testing
 run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
 on:
   workflow_dispatch:
